--- a/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
+++ b/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
@@ -1,6 +1,6 @@
 parameter_error="parameter error"
-user_not_exists="用户不存在"
-i18n_passowrd_wrong="密码错误"
-i18n_state_error="状态错误"
-i18n_param_error="参数错误"
-i18n_status_not_valid="状态不正确"
+user_not_exists="user_not_exists"
+i18n_passowrd_wrong="i18n_passowrd_wrong"
+i18n_state_error="i18n_state_error"
+i18n_param_error="i18n_param_error"
+i18n_status_not_valid="i18n_status_not_valid"
