fix:参数校验国际化

--- a/rackshift-web/src/i18n/zh-CN.json
+++ b/rackshift-web/src/i18n/zh-CN.json
@@ -1,2 +1,220 @@
 {
+  "cancel": "取消",
+  "Networks": "网络",
+  "Configuration": "配置",
+  "fs_type": "分区格式",
+  "proc_socket": "处理器插槽",
+  "del": "删除",
+  "Languages": "语言",
+  "hostname": "hostname",
+  "ExecutionLog": "部署日志",
+  "password": "密码",
+  "add_network": "添加网络",
+  "Endpoint": "Endpoint",
+  "controller_id": "控制器号",
+  "english": "英语",
+  "mem_mod_size": "内存容量",
+  "disk_detail": "磁盘详情",
+  "edit_success": "编辑成功",
+  "nic_number": "网卡编号",
+  "pls_input_email": "请输入email",
+  "user_settable": "是否可配置",
+  "edit": "编辑",
+  "edit_system_parameter": "编辑系统参数",
+  "Images": "镜像",
+  "Workflow": "工作流",
+  "delete_fail": "删除失败",
+  "batch_del": "批量删除",
+  "size": "容量",
+  "detail": "详情",
+  "drive": "插槽号",
+  "param_value": "参数值",
+  "role": "角色",
+  "user_name": "用户名",
+  "bare_metal": "裸金属",
+  "pls_input_vlan_id": "请输入vlanId",
+  "add_outband": "添加带外",
+  "add_workflow": "添加工作流",
+  "network_card": "网卡",
+  "endpoint": "endpoint",
+  "pls_select_bare_metal": "请选择裸金属服务器",
+  "start_ip": "起始 IP",
+  "edit_execution_log": "编辑部署日志",
+  "pls_input_start_ip": "请输入开始ip",
+  "sn": "序列号",
+  "close": "关闭",
+  "email": "email",
+  "delete_success": "删除成功",
+  "brands": "支持的品牌",
+  "validate_error": "参数校验错误",
+  "refresh": "刷新",
+  "origin-password": "原密码",
+  "Run": "执行",
+  "confirm": "确定",
+  "discoveryed_devices": "已发现网络设备",
+  "pls_input_user_name": "请输入用户名",
+  "root_pwd": "root密码",
+  "pls_select_workflow": "请选择工作流",
+  "network_devices": "网卡ip设置",
+  "raid_disk": "RAID磁盘",
+  "operation": "操作",
+  "vlan_id": "vlanId",
+  "pls_select_image": "请选择镜像",
+  "obms": "带外信息",
+  "sync_time": "同步时间",
+  "confirm_to_del": "确认删除",
+  "edit_discovery": "编辑发现规则",
+  "chinese": "中文",
+  "view": "查看",
+  "management_ip": "带外IP",
+  "proc_num_threads": "线程数",
+  "memory_detail": "内存详情",
+  "info": "信息",
+  "add": "添加",
+  "endIp": "结束IP",
+  "image": "镜像",
+  "create_time": "创建时间",
+  "vlanId": "vlanId",
+  "please_select": "请选择",
+  "sync": "同步",
+  "Role": "角色",
+  "opt": "操作",
+  "pxe_enable": "是否开启PXE",
+  "success": "成功",
+  "name": "名称",
+  "desc": "描述",
+  "memory": "内存",
+  "description": "描述",
+  "cpu_detail": "cpu详情",
+  "pls_select": "请选择",
+  "Control": "控制",
+  "mem_cpu_num": "内存cpu编号",
+  "SystemParameter": "系统参数",
+  "GB": "GB",
+  "OBM": "带外",
+  "change_pwd": "修改密码",
+  "OverView": "概览",
+  "mask": "子网掩码",
+  "pls_input_os_version": "请输入OS版本号",
+  "not_supported_brand!": "不支持品牌-",
+  "Info": "个人信息",
+  "input_key_search": "请输入搜索关键字/型号/序列号/IP",
+  "add_endpoint": "添加endpoint",
+  "pxeboot": "pxe重启",
+  "edit_fail": "编辑失败",
+  "proc_speed": "处理器频率",
+  "Bare Metal Server": "裸金属服务器",
+  "os_vesion": "os版本",
+  "obm": "带外管理",
+  "time": "事件",
+  "ip_addr": "ip地址",
+  "gateway": "网关",
+  "username": "用户名",
+  "fanti": "繁体",
+  "pls_input_pwd": "请输入密码",
+  "edit_network": "编辑网络",
+  "type": "类型",
+  "Image": "镜像",
+  "tips": "提示",
+  "output": "输出",
+  "default_params": "默认参数",
+  "logout": "退出",
+  "event_type": "事件类型",
+  "Network": "网络",
+  "id": "id",
+  "proc_num_cores": "处理器核心数",
+  "view_detail": "查看详情",
+  "selected_workflows": "已选工作流",
+  "IP": "IP",
+  "ip": "IP",
+  "pls_input_phone": "请输入手机号",
+  "add_execution_log": "添加部署日志",
+  "Login": "登陆",
+  "add_system_parameter": "添加系统参数",
+  "pls_select_node": "请选择服务器",
+  "pls_select_obm": "请选择OBM",
+  "phone": "手机号",
+  "pls_input_url": "请输入url或直接上传iso文件",
+  "reset": "重置",
+  "sync_status": "同步状态",
+  "pwd": "密码",
+  "Subnet": "子网",
+  "add_success": "添加成功",
+  "view_execution_log": "查看部署日志",
+  "status": "状态",
+  "submitting": "提交中",
+  "poweron": "启动",
+  "edit_role": "编辑角色",
+  "mac": "mac地址",
+  "capacity": "容量",
+  "pls_set_params": "请设置参数",
+  "update_time": "更新时间",
+  "pls_fill_in_blanks": "请填空",
+  "pls_input_end_ip": "请输入结束ip",
+  "pls_input_param_value": "请输入参数值",
+  "set_workflow_param": "设置工作流参数",
+  "poweroff": "关闭",
+  "edit_outband": "编辑带外",
+  "pls_select_system_parameter": "请选择系统参数",
+  "os_version": "os版本",
+  "execution_log": "部署日志",
+  "machine_model": "机器型号",
+  "machine_sn": "机器序列号",
+  "new-password": "新密码",
+  "url": "url",
+  "mem_mod_num": "内存插槽号",
+  "mem_mod_part_num": "内存型号",
+  "discovery": "发现",
+  "edit_endpoint": "编辑endpoint",
+  "raid_type": "RAID类型",
+  "Execution Log": "部署日志",
+  "powercycle": "电源循环",
+  "mem_mod_min_volt": "内存最低电压",
+  "same_workflow_node": "同一节点不可以同时执行多次同样的工作流",
+  "CPU": "CPU",
+  "custom_partition": "自定义分区",
+  "custom_raid": "自定义RAID",
+  "pls_input_netmask": "请输入子网掩码",
+  "edit_image": "编辑镜像",
+  "end_ip": "结束 IP",
+  "confirm-password": "确认新密码",
+  "machine_status": "机器状态",
+  "mem_mod_frequency": "内存频率",
+  "param_config": "参数配置",
+  "Resource": "资源",
+  "Discovery": "发现",
+  "cpu": "cpu",
+  "manufactor": "制造商",
+  "add_fail": "添加失败",
+  "disk": "磁盘",
+  "network_card_mac": "网卡mac地址",
+  "pls_input_name": "请输入名称",
+  "dhcp_enable": "是否开启DHCP",
+  "injectable_name": "RackHD数据库名称",
+  "proc_name": "处理器型号",
+  "no_nessary_to_set": "无参数设置",
+  "raid": "Raid级别",
+  "startIp": "开始IP",
+  "User": "用户",
+  "enclosure_id": "enclosureId",
+  "bmc_mac": "带外mac",
+  "error": "错误",
+  "mem_mod_type": "内存类型",
+  "settable": "是否可设置",
+  "add_image": "添加镜像",
+  "netmask": "子网掩码",
+  "param_key": "参数key",
+  "add_to_selected_wf_list": "添加至已选工作流",
+  "friendly_name": "友好名称",
+  "injectable_mame": "RackHD数据库名称",
+  "os": "os",
+  "nic_detail": "网卡详情",
+  "mount_point": "挂载点",
+  "pls_select_endpoint": "请选择endpoint",
+  "add_discovery": "添加发现协议",
+  "Machines": "裸金属服务器",
+  "user": "用户",
+  "Wizard": "使用向导",
+  "edit_workflow": "编辑工作流",
+  "Plugin": "插件"
 }
