feat:重构国际化菜单，退出登陆菜单，页面增加tab

--- a/rackshift-web/src/i18n/zh-CN.json
+++ b/rackshift-web/src/i18n/zh-CN.json
@@ -6,6 +6,7 @@
   "proc_socket": "处理器插槽",
   "del": "删除",
   "Languages": "语言",
+  "cannt_be_null": "参数不能为空",
   "hostname": "hostname",
   "ExecutionLog": "部署日志",
   "password": "密码",
@@ -36,7 +37,7 @@
   "add_outband": "添加带外",
   "add_workflow": "添加工作流",
   "network_card": "网卡",
-  "endpoint": "endpoint",
+  "endpoint": "节点",
   "pls_select_bare_metal": "请选择裸金属服务器",
   "start_ip": "起始 IP",
   "edit_execution_log": "编辑部署日志",
@@ -59,55 +60,62 @@
   "raid_disk": "RAID磁盘",
   "operation": "操作",
   "vlan_id": "vlanId",
+  "pls_select_discovery": "请选择发现规则",
   "pls_select_image": "请选择镜像",
   "obms": "带外信息",
   "sync_time": "同步时间",
   "confirm_to_del": "确认删除",
+  "edit_discovery-devices": "编辑已发现设备",
   "edit_discovery": "编辑发现规则",
+  "pls_input_password": "请输入密码",
   "chinese": "中文",
   "view": "查看",
-  "management_ip": "带外IP",
+  "management_ip": "带外 IP",
   "proc_num_threads": "线程数",
   "memory_detail": "内存详情",
+  "invalid_format": "参数格式错误",
   "info": "信息",
   "add": "添加",
-  "endIp": "结束IP",
+  "endIp": "结束 IP",
   "image": "镜像",
   "create_time": "创建时间",
   "vlanId": "vlanId",
+  "pls_select_": "请选择",
   "please_select": "请选择",
   "sync": "同步",
   "Role": "角色",
   "opt": "操作",
-  "pxe_enable": "是否开启PXE",
+  "pxe_enable": "是否开启 PXE",
   "success": "成功",
   "name": "名称",
   "desc": "描述",
   "memory": "内存",
   "description": "描述",
-  "cpu_detail": "cpu详情",
+  "cpu_detail": "CPU 详情",
   "pls_select": "请选择",
   "Control": "控制",
-  "mem_cpu_num": "内存cpu编号",
+  "mem_cpu_num": "内存 CPU 编号",
   "SystemParameter": "系统参数",
   "GB": "GB",
   "OBM": "带外",
   "change_pwd": "修改密码",
   "OverView": "概览",
   "mask": "子网掩码",
-  "pls_input_os_version": "请输入OS版本号",
+  "last_sync_timestamp": "上次同步时间",
+  "pls_input_os_version": "请输入 OS 版本号",
   "not_supported_brand!": "不支持品牌-",
   "Info": "个人信息",
   "input_key_search": "请输入搜索关键字/型号/序列号/IP",
-  "add_endpoint": "添加endpoint",
-  "pxeboot": "pxe重启",
+  "add_endpoint": "添加节点",
+  "pxeboot": "PXE 重启",
   "edit_fail": "编辑失败",
   "proc_speed": "处理器频率",
   "Bare Metal Server": "裸金属服务器",
-  "os_vesion": "os版本",
+  "pls_select_network": "请选择子网",
+  "os_vesion": "OS 版本",
   "obm": "带外管理",
   "time": "事件",
-  "ip_addr": "ip地址",
+  "ip_addr": "IP 地址",
   "gateway": "网关",
   "username": "用户名",
   "fanti": "繁体",
@@ -116,6 +124,7 @@
   "type": "类型",
   "Image": "镜像",
   "tips": "提示",
+  "hostname_must_not_have_invalid_word": "hostname 不合法",
   "output": "输出",
   "default_params": "默认参数",
   "logout": "退出",
@@ -132,11 +141,12 @@
   "Login": "登陆",
   "add_system_parameter": "添加系统参数",
   "pls_select_node": "请选择服务器",
-  "pls_select_obm": "请选择OBM",
+  "pls_select_obm": "请选择带外信息",
   "phone": "手机号",
-  "pls_input_url": "请输入url或直接上传iso文件",
+  "pls_input_url": "请输入 URL 或直接上传 ISO 文件",
   "reset": "重置",
   "sync_status": "同步状态",
+  "pls_input_username": "请输入用户名",
   "pwd": "密码",
   "Subnet": "子网",
   "add_success": "添加成功",
@@ -144,19 +154,22 @@
   "status": "状态",
   "submitting": "提交中",
   "poweron": "启动",
+  "pls_select_username": "请选择用户名",
+  "add_discovery-devices": "添加到已发现",
   "edit_role": "编辑角色",
   "mac": "mac地址",
   "capacity": "容量",
   "pls_set_params": "请设置参数",
   "update_time": "更新时间",
   "pls_fill_in_blanks": "请填空",
-  "pls_input_end_ip": "请输入结束ip",
+  "pls_input_end_ip": "请输入结束 IP",
+  "add_to_device": "添加到裸金属",
   "pls_input_param_value": "请输入参数值",
   "set_workflow_param": "设置工作流参数",
   "poweroff": "关闭",
   "edit_outband": "编辑带外",
   "pls_select_system_parameter": "请选择系统参数",
-  "os_version": "os版本",
+  "os_version": "OS 版本",
   "execution_log": "部署日志",
   "machine_model": "机器型号",
   "machine_sn": "机器序列号",
@@ -165,15 +178,16 @@
   "mem_mod_num": "内存插槽号",
   "mem_mod_part_num": "内存型号",
   "discovery": "发现",
-  "edit_endpoint": "编辑endpoint",
-  "raid_type": "RAID类型",
+  "edit_endpoint": "编辑节点",
+  "raid_type": "RAID 类型",
   "Execution Log": "部署日志",
   "powercycle": "电源循环",
   "mem_mod_min_volt": "内存最低电压",
   "same_workflow_node": "同一节点不可以同时执行多次同样的工作流",
   "CPU": "CPU",
   "custom_partition": "自定义分区",
-  "custom_raid": "自定义RAID",
+  "pls_input_hostname": "请输入 hostname",
+  "custom_raid": "自定义 RAID",
   "pls_input_netmask": "请输入子网掩码",
   "edit_image": "编辑镜像",
   "end_ip": "结束 IP",
@@ -183,48 +197,41 @@
   "param_config": "参数配置",
   "Resource": "资源",
   "Discovery": "发现",
-  "cpu": "cpu",
+  "cpu": "CPU",
   "manufactor": "制造商",
   "add_fail": "添加失败",
+  "pls_select_password": "请选择密码",
   "disk": "磁盘",
-  "network_card_mac": "网卡mac地址",
+  "network_card_mac": "网卡 MAC 地址",
+  "pls_input_params": "请输入参数",
   "pls_input_name": "请输入名称",
-  "dhcp_enable": "是否开启DHCP",
-  "injectable_name": "RackHD数据库名称",
+  "pls_select_discovery-devices": "请选择已发现设备",
+  "dhcp_enable": "是否开启 DHCP",
+  "injectable_name": "RackHD 数据库名称",
   "proc_name": "处理器型号",
   "no_nessary_to_set": "无参数设置",
-  "raid": "Raid级别",
-  "startIp": "开始IP",
+  "raid": "Raid 级别",
+  "startIp": "开始 IP",
   "User": "用户",
-  "enclosure_id": "enclosureId",
-  "bmc_mac": "带外mac",
+  "enclosure_id": "EnclosureId",
+  "bmc_mac": "带外 MAC",
   "error": "错误",
   "mem_mod_type": "内存类型",
   "settable": "是否可设置",
   "add_image": "添加镜像",
   "netmask": "子网掩码",
-  "param_key": "参数key",
+  "param_key": "参数 Key",
   "add_to_selected_wf_list": "添加至已选工作流",
-  "friendly_name": "友好名称",
-  "injectable_mame": "RackHD数据库名称",
+  "friendly_name": "名称",
+  "injectable_mame": "RackHD 数据库名称",
   "os": "os",
   "nic_detail": "网卡详情",
   "mount_point": "挂载点",
-  "pls_select_endpoint": "请选择endpoint",
+  "pls_select_endpoint": "请选择节点",
   "add_discovery": "添加发现协议",
   "Machines": "裸金属服务器",
   "user": "用户",
   "Wizard": "使用向导",
   "edit_workflow": "编辑工作流",
-  "Plugin": "插件",
-  "pls_input_username": "请输入用户名",
-  "pls_input_password": "请输入密码",
-  "pls_input_params": "请输入参数",
-  "pls_select_username": "请选择用户名",
-  "pls_select_password": "请选择密码",
-  "pls_select_": "请选择",
-  "pls_input_hostname": "请输入hostname",
-  "hostname_must_not_have_invalid_word": "hostname不合法",
-  "cannt_be_null": "参数不能为空",
-  "invalid_format": "参数格式错误"
+  "Plugin": "插件"
 }
