refactor:重构编辑删除按钮，国际化，屏蔽带外管理

--- a/rackshift-web/src/i18n/zh-CN.json
+++ b/rackshift-web/src/i18n/zh-CN.json
@@ -44,7 +44,7 @@
   "pls_input_start_ip": "请输入开始ip",
   "sn": "序列号",
   "close": "关闭",
-  "email": "email",
+  "email": "Email",
   "delete_success": "删除成功",
   "brands": "支持的品牌",
   "validate_error": "参数校验错误",
@@ -59,7 +59,7 @@
   "network_devices": "网卡ip设置",
   "raid_disk": "RAID磁盘",
   "operation": "操作",
-  "vlan_id": "vlanId",
+  "vlan_id": "VlanId",
   "pls_select_discovery": "请选择发现规则",
   "pls_select_image": "请选择镜像",
   "obms": "带外信息",
@@ -79,7 +79,7 @@
   "endIp": "结束 IP",
   "image": "镜像",
   "create_time": "创建时间",
-  "vlanId": "vlanId",
+  "vlanId": "VlanId",
   "pls_select_": "请选择",
   "please_select": "请选择",
   "sync": "同步",
@@ -130,7 +130,7 @@
   "logout": "退出",
   "event_type": "事件类型",
   "Network": "网络",
-  "id": "id",
+  "id": "ID",
   "proc_num_cores": "处理器核心数",
   "view_detail": "查看详情",
   "selected_workflows": "已选工作流",
@@ -174,7 +174,7 @@
   "machine_model": "机器型号",
   "machine_sn": "机器序列号",
   "new-password": "新密码",
-  "url": "url",
+  "url": "URL",
   "mem_mod_num": "内存插槽号",
   "mem_mod_part_num": "内存型号",
   "discovery": "发现",
@@ -224,7 +224,7 @@
   "add_to_selected_wf_list": "添加至已选工作流",
   "friendly_name": "名称",
   "injectable_mame": "RackHD 数据库名称",
-  "os": "os",
+  "os": "OS",
   "nic_detail": "网卡详情",
   "mount_point": "挂载点",
   "pls_select_endpoint": "请选择节点",
@@ -233,5 +233,11 @@
   "user": "用户",
   "Wizard": "使用向导",
   "edit_workflow": "编辑工作流",
-  "Plugin": "插件"
+  "Plugin": "插件",
+  "zh_CN": "简体中文",
+  "zh_TW": "繁體中文",
+  "en_US": "English",
+  "enabled": "是",
+  "disabled": "否",
+  "system": "系统"
 }
