fix:遗漏国际化，参数校验，样式美化list超出隐藏等

--- a/rackshift-web/src/i18n/zh-CN.json
+++ b/rackshift-web/src/i18n/zh-CN.json
@@ -1,6 +1,7 @@
 {
   "cancel": "取消",
   "Networks": "网络",
+  "hostname_must_not_have_invalid_word!": "hostname 命名不合法！",
   "Configuration": "配置",
   "fs_type": "分区格式",
   "proc_socket": "处理器插槽",
@@ -13,13 +14,16 @@
   "add_network": "添加网络",
   "Endpoint": "Endpoint",
   "controller_id": "控制器号",
+  "param_cannot_be_null!": "参数不能为空！",
+  "delete_success!": "删除成功",
   "english": "英语",
   "mem_mod_size": "内存容量",
   "disk_detail": "磁盘详情",
+  "ERROR": "失败",
   "edit_success": "编辑成功",
   "nic_number": "网卡编号",
   "pls_input_email": "请输入email",
-  "user_settable": "是否可配置",
+  "user_settable": "配置",
   "edit": "编辑",
   "edit_system_parameter": "编辑系统参数",
   "Images": "镜像",
@@ -27,6 +31,7 @@
   "delete_fail": "删除失败",
   "batch_del": "批量删除",
   "size": "容量",
+  "en_US": "English",
   "detail": "详情",
   "drive": "插槽号",
   "param_value": "参数值",
@@ -42,12 +47,15 @@
   "start_ip": "起始 IP",
   "edit_execution_log": "编辑部署日志",
   "pls_input_start_ip": "请输入开始ip",
+  "disabled": "否",
   "sn": "序列号",
   "close": "关闭",
   "email": "Email",
-  "delete_success": "删除成功",
+  "discovering": "信息搜集中",
   "brands": "支持的品牌",
   "validate_error": "参数校验错误",
+  "SUCCESS": "成功",
+  "delete_success": "删除成功",
   "refresh": "刷新",
   "origin-password": "原密码",
   "Run": "执行",
@@ -57,6 +65,7 @@
   "root_pwd": "ROOT 密码",
   "pls_select_workflow": "请选择工作流",
   "network_devices": "网卡ip设置",
+  "deploying": "部署中",
   "raid_disk": "RAID磁盘",
   "operation": "操作",
   "vlan_id": "VlanId",
@@ -73,7 +82,8 @@
   "management_ip": "带外 IP",
   "proc_num_threads": "线程数",
   "memory_detail": "内存详情",
-  "ip_invalid_format": "IP 格式错误",
+  "onrack": "已上架",
+  "username_pwd_error_login_fail": "用户名/密码错误",
   "info": "信息",
   "add": "添加",
   "endIp": "结束 IP",
@@ -90,6 +100,7 @@
   "name": "名称",
   "desc": "描述",
   "memory": "内存",
+  "show": "显示",
   "description": "描述",
   "cpu_detail": "CPU 详情",
   "pls_select": "请选择",
@@ -99,7 +110,9 @@
   "GB": "GB",
   "OBM": "带外",
   "change_pwd": "修改密码",
+  "ip_invalid_format": "IP 格式错误",
   "OverView": "概览",
+  "param_check_error": "参数校验失败！",
   "mask": "子网掩码",
   "last_sync_timestamp": "上次同步时间",
   "pls_input_os_version": "请输入 OS 版本号",
@@ -114,7 +127,7 @@
   "pls_select_network": "请选择子网",
   "os_vesion": "OS 版本",
   "obm": "带外管理",
-  "time": "事件",
+  "time": "时间",
   "ip_addr": "IP 地址",
   "gateway": "网关",
   "username": "用户名",
@@ -129,6 +142,7 @@
   "default_params": "默认参数",
   "logout": "退出",
   "event_type": "事件类型",
+  "enable": "开启",
   "Network": "网络",
   "id": "ID",
   "proc_num_cores": "处理器核心数",
@@ -141,6 +155,7 @@
   "Login": "登陆",
   "add_system_parameter": "添加系统参数",
   "pls_select_node": "请选择服务器",
+  "system": "系统",
   "pls_select_obm": "请选择带外信息",
   "phone": "手机号",
   "pls_input_url": "请输入 URL 或直接上传 ISO 文件",
@@ -158,6 +173,7 @@
   "add_discovery-devices": "添加到已发现",
   "edit_role": "编辑角色",
   "mac": "mac地址",
+  "enabled": "是",
   "capacity": "容量",
   "pls_set_params": "请设置参数",
   "update_time": "更新时间",
@@ -173,11 +189,13 @@
   "execution_log": "部署日志",
   "machine_model": "机器型号",
   "machine_sn": "机器序列号",
+  "PENDING": "同步中",
   "new-password": "新密码",
   "url": "URL",
   "mem_mod_num": "内存插槽号",
   "mem_mod_part_num": "内存型号",
   "discovery": "发现",
+  "disable": "关闭",
   "edit_endpoint": "编辑节点",
   "raid_type": "RAID 类型",
   "Execution Log": "部署日志",
@@ -188,12 +206,16 @@
   "custom_partition": "自定义分区",
   "pls_input_hostname": "请输入 hostname",
   "custom_raid": "自定义 RAID",
+  "opt_fail": "操作失败",
   "pls_input_netmask": "请输入子网掩码",
+  "view_url": "查看 URL",
   "edit_image": "编辑镜像",
+  "login_timeout": "登陆超时",
   "end_ip": "结束 IP",
   "confirm-password": "确认新密码",
   "machine_status": "机器状态",
   "mem_mod_frequency": "内存频率",
+  "copy_success": "复制成功",
   "param_config": "参数配置",
   "Resource": "资源",
   "Discovery": "发现",
@@ -214,32 +236,35 @@
   "startIp": "开始 IP",
   "User": "用户",
   "enclosure_id": "EnclosureId",
+  "deployed": "已部署",
   "bmc_mac": "带外 MAC",
   "error": "错误",
+  "delete": "删除",
   "mem_mod_type": "内存类型",
   "settable": "是否可设置",
+  "zh_TW": "繁體中文",
   "add_image": "添加镜像",
   "netmask": "子网掩码",
   "param_key": "参数 Key",
+  "ready": "就绪",
   "add_to_selected_wf_list": "添加至已选工作流",
+  "provisioning": "准备中",
+  "allocated": "已分配",
   "friendly_name": "名称",
   "injectable_mame": "RackHD 数据库名称",
   "os": "OS",
+  "opt_success": "操作成功",
   "nic_detail": "网卡详情",
+  "endpointId": "节点 ID",
   "mount_point": "挂载点",
   "pls_select_endpoint": "请选择节点",
+  "no_valid_image!": "没有找到镜像，请先上传镜像文件！",
   "add_discovery": "添加发现协议",
+  "login_fail": "登陆失败",
+  "zh_CN": "简体中文",
   "Machines": "裸金属服务器",
   "user": "用户",
   "Wizard": "使用向导",
   "edit_workflow": "编辑工作流",
-  "Plugin": "插件",
-  "zh_CN": "简体中文",
-  "zh_TW": "繁體中文",
-  "en_US": "English",
-  "enabled": "是",
-  "disabled": "否",
-  "system": "系统",
-  "no_valid_image!": "没有找到镜像，请先上传镜像文件！",
-  "delete": "删除"
+  "Plugin": "插件"
 }
