feat:插件代码完整提交

--- a/rackshift-web/src/i18n/zh-CN.json
+++ b/rackshift-web/src/i18n/zh-CN.json
@@ -1,4 +1,318 @@
 {
+  "cancel": "取消",
+  "Networks": "网络",
+  "hostname_must_not_have_invalid_word!": "hostname 命名不合法！",
+  "Configuration": "配置",
+  "fs_type": "分区格式",
+  "proc_socket": "处理器插槽",
+  "del": "删除",
+  "Languages": "语言",
+  "cannt_be_null": "参数不能为空",
+  "hostname": "HOSTNAME",
+  "ExecutionLog": "部署日志",
+  "password": "密码",
+  "add_network": "添加网络",
+  "Endpoint": "Endpoint",
+  "controller_id": "控制器号",
+  "param_cannot_be_null!": "参数不能为空！",
+  "delete_success!": "删除成功",
+  "english": "英语",
+  "mem_mod_size": "内存容量",
+  "disk_detail": "磁盘详情",
+  "ERROR": "失败",
+  "edit_success": "编辑成功",
+  "nic_number": "网卡编号",
+  "pls_input_email": "请输入邮箱",
+  "user_settable": "配置",
+  "edit": "编辑",
+  "edit_system_parameter": "编辑系统参数",
+  "Images": "镜像",
+  "Workflow": "工作流",
+  "delete_fail": "删除失败",
+  "batch_del": "批量删除",
+  "size": "容量",
+  "en_US": "English",
+  "detail": "详情",
+  "drive": "插槽号",
+  "param_value": "参数值",
+  "role": "角色",
+  "user_name": "用户名",
+  "bare_metal": "裸金属",
+  "pls_input_vlan_id": "请输入vlanId",
+  "add_outband": "添加带外",
+  "add_workflow": "添加工作流",
+  "network_card": "网卡",
+  "endpoint": "节点",
+  "pls_select_bare_metal": "请选择将执行工作流的裸金属服务器",
+  "start_ip": "起始 IP",
+  "edit_execution_log": "编辑部署日志",
+  "pls_input_start_ip": "请输入开始ip",
+  "disabled": "否",
+  "sn": "序列号",
+  "close": "关闭",
+  "email": "邮箱",
+  "discovering": "发现中",
+  "brands": "支持的品牌",
+  "validate_error": "参数校验错误",
+  "SUCCESS": "成功",
+  "delete_success": "删除成功",
+  "refresh": "刷新",
+  "origin-password": "原密码",
+  "Run": "执行",
+  "confirm": "确定",
+  "discoveryed_devices": "已发现网络设备",
+  "pls_input_user_name": "请输入用户名",
+  "root_pwd": "ROOT 密码",
+  "pls_select_workflow": "请选择工作流",
+  "network_devices": "网卡ip设置",
+  "deploying": "部署中",
+  "raid_disk": "RAID磁盘",
+  "operation": "操作",
+  "vlan_id": "VlanId",
+  "pls_select_discovery": "请选择发现规则",
+  "pls_select_image": "请选择镜像",
+  "obms": "带外信息",
+  "sync_time": "同步时间",
+  "confirm_to_del": "确认删除 ？",
+  "edit_discovery-devices": "编辑已发现设备",
+  "edit_discovery": "编辑发现规则",
+  "pls_input_password": "请输入密码",
+  "chinese": "中文",
+  "view": "查看",
+  "management_ip": "带外 IP",
+  "proc_num_threads": "线程数",
+  "memory_detail": "内存详情",
+  "onrack": "已上架",
+  "username_pwd_error_login_fail": "用户名/密码错误",
+  "info": "信息",
+  "add": "添加",
+  "endIp": "结束 IP",
+  "image": "镜像",
+  "create_time": "创建时间",
+  "vlanId": "VlanId",
+  "pls_select_": "请选择",
+  "please_select": "请选择",
+  "sync": "同步",
+  "Role": "角色",
+  "opt": "操作",
+  "pxe_enable": "是否开启 PXE",
+  "success": "成功",
+  "name": "名称",
+  "desc": "描述",
+  "memory": "内存",
+  "show": "显示",
+  "description": "描述",
+  "cpu_detail": "CPU 详情",
+  "pls_select": "请选择",
+  "Control": "控制",
+  "mem_cpu_num": "内存 CPU 编号",
+  "SystemParameter": "系统参数",
+  "GB": "GB",
+  "OBM": "带外",
+  "change_pwd": "修改密码",
+  "ip_invalid_format": "IP 格式错误",
+  "OverView": "概览",
+  "param_check_error": "参数校验失败！",
+  "mask": "子网掩码",
+  "last_sync_timestamp": "上次同步时间",
+  "pls_input_os_version": "请输入 OS 版本号",
+  "not_supported_brand!": "不支持品牌-",
+  "Info": "个人信息",
+  "input_key_search": "型号/序列号/IP",
+  "add_endpoint": "添加节点",
+  "pxeboot": "PXE 重启",
+  "edit_fail": "编辑失败",
+  "proc_speed": "处理器频率",
+  "Bare Metal Server": "裸金属服务器",
+  "pls_select_network": "请选择子网",
+  "os_vesion": "OS 版本",
+  "obm": "带外管理",
+  "time": "时间",
+  "ip_addr": "IP 地址",
+  "gateway": "网关",
+  "username": "用户名",
+  "fanti": "繁体",
+  "pls_input_pwd": "请输入密码",
+  "edit_network": "编辑网络",
+  "type": "类型",
+  "Image": "镜像",
+  "tips": "提示",
+  "hostname_must_not_have_invalid_word": "hostname 不合法",
+  "output": "输出",
+  "default_params": "默认参数",
+  "logout": "退出",
+  "event_type": "事件类型",
+  "enable": "开启",
+  "Network": "网络",
+  "id": "ID",
+  "proc_num_cores": "处理器核心数",
+  "view_detail": "查看详情",
+  "selected_workflows": "待执行工作流",
+  "IP": "IP",
+  "ip": "IP",
+  "pls_input_phone": "请输入手机号",
+  "add_execution_log": "添加部署日志",
+  "Login": "登录",
+  "add_system_parameter": "添加系统参数",
+  "pls_select_node": "请选择服务器",
+  "system": "系统",
+  "pls_select_obm": "请选择带外信息",
+  "phone": "手机号",
+  "pls_input_url": "请输入 URL 或直接上传 ISO 文件",
+  "reset": "重置",
+  "sync_status": "同步状态",
+  "pls_input_username": "请输入用户名",
+  "pwd": "密码",
+  "Subnet": "子网",
+  "add_success": "添加成功",
+  "view_execution_log": "查看部署日志",
+  "status": "状态",
+  "submitting": "提交中",
+  "poweron": "启动",
+  "pls_select_username": "请选择用户名",
+  "add_discovery-devices": "添加到已发现",
+  "edit_role": "编辑角色",
+  "mac": "mac地址",
+  "enabled": "是",
+  "capacity": "容量",
+  "pls_set_params": "请设置参数",
+  "update_time": "更新时间",
+  "pls_fill_in_blanks": "请填空",
+  "pls_input_end_ip": "请输入结束 IP",
+  "add_to_device": "添加到裸金属",
+  "pls_input_param_value": "请输入参数值",
+  "set_workflow_param": "设置工作流参数",
+  "poweroff": "关闭",
+  "edit_outband": "编辑带外",
+  "pls_select_system_parameter": "请选择系统参数",
+  "os_version": "OS 版本",
+  "execution_log": "部署日志",
+  "machine_model": "机器品牌/型号",
+  "machine_sn": "机器序列号",
+  "PENDING": "同步中",
+  "new-password": "新密码",
+  "url": "URL",
+  "mem_mod_num": "内存插槽号",
+  "mem_mod_part_num": "内存型号",
+  "discovery": "发现",
+  "disable": "关闭",
+  "edit_endpoint": "编辑节点",
+  "raid_type": "RAID 类型",
+  "Execution Log": "部署日志",
+  "powercycle": "电源循环",
+  "mem_mod_min_volt": "内存最低电压",
+  "same_workflow_node": "同一节点不可以同时执行多次同样的工作流",
+  "CPU": "CPU",
+  "custom_partition": "自定义分区",
+  "pls_input_hostname": "请输入 hostname",
+  "custom_raid": "自定义 RAID",
+  "opt_fail": "操作失败",
+  "pls_input_netmask": "请输入子网掩码",
+  "view_url": "查看 URL",
+  "edit_image": "编辑镜像",
+  "login_timeout": "登录超时",
+  "end_ip": "结束 IP",
+  "confirm-password": "确认新密码",
+  "machine_status": "机器状态",
+  "mem_mod_frequency": "内存频率",
+  "copy_success": "复制成功",
+  "param_config": "参数配置",
+  "Resource": "资源",
+  "Discovery": "发现",
+  "cpu": "CPU",
+  "manufactor": "制造商",
+  "add_fail": "添加失败",
+  "pls_select_password": "请选择密码",
+  "disk": "磁盘",
+  "network_card_mac": "网卡 MAC 地址",
+  "pls_input_params": "该项不能为空",
+  "pls_input_name": "请输入名称",
+  "pls_select_discovery-devices": "请选择已发现设备",
+  "dhcp_enable": "是否开启 DHCP",
+  "injectable_name": "工作流模板",
+  "proc_name": "处理器型号",
+  "no_nessary_to_set": "无参数设置",
+  "raid": "RAID级别",
+  "startIp": "开始 IP",
+  "User": "用户",
+  "enclosure_id": "EnclosureId",
+  "deployed": "已部署",
+  "bmc_mac": "带外 MAC",
+  "error": "错误",
+  "delete": "删除",
+  "mem_mod_type": "内存类型",
+  "settable": "是否可设置参数",
+  "zh_TW": "繁體中文",
+  "add_image": "添加镜像",
+  "netmask": "子网掩码",
+  "param_key": "参数 Key",
+  "ready": "就绪",
+  "add_to_selected_wf_list": "添加至待执行工作流",
+  "provisioning": "准备中",
+  "allocated": "已分配",
+  "friendly_name": "名称",
+  "os": "OS",
+  "opt_success": "操作成功",
+  "nic_detail": "网卡详情",
+  "endpointId": "节点 ID",
+  "mount_point": "挂载点",
+  "pls_select_endpoint": "请选择节点",
+  "no_valid_image!": "没有找到镜像，请先上传镜像文件！",
+  "add_discovery": "添加发现规则",
+  "login_fail": "登录失败",
+  "zh_CN": "简体中文",
+  "Machines": "裸金属服务器",
+  "user": "用户",
+  "Wizard": "使用向导",
+  "edit_workflow": "编辑工作流",
+  "Plugin": "插件",
+  "FILL_OBMS": "补充 OBM 信息",
+  "PXE_BOOT_START": "PXE 启动",
+  "PXE_BOOT_END": "PXE 启动完毕",
+  "PXE_BOOT_CANCEL": "取消 PXE 启动",
+  "POST_DISCOVERY_WORKFLOW_START": "下发发现工作流",
+  "POST_DISCOVERY_WORKFLOW_END": "发现工作流执行完毕",
+  "POST_DISCOVERY_WORKFLOW_CANCEL": "取消发现工作流",
+  "POST_OTHER_WORKFLOW_START": "下发通用工作流",
+  "POST_OTHER_WORKFLOW_END": "工作流执行完毕",
+  "POST_OTHER_WORKFLOW_CANCEL": "取消工作流",
+  "POST_OS_WORKFLOW_START": "下发安装系统工作流",
+  "POST_OS_WORKFLOW_END": "安装系统工作流执行完毕",
+  "POST_OS_WORKFLOW_CANCEL": "取消安装系统工作流",
+  "device": "设备",
+  "START": "开始",
+  "TERMINATE": "用户终止",
+  "END": "结束",
+  "SUBMIT": "提交",
+  "PROCESSING": "处理中",
+  "email_format_error": "邮箱格式错误",
+  "phone_format_error": "手机格式错误",
+  "admin": "管理员",
+  "i18n_mount_point_cant_be_null": "挂载点不能为空！",
+  "i18n_capacity_cant_be_null": "容量不能为空！",
+  "i18n_must_be_root_swap_boot": "必须有根，swap和/boot分区，并且所有分区最低容量不能小于1GB！",
+  "i18n_auto_or_number_0_or_1": "分区容量只能是数字或者auto，并且容量为auto的分区只能为0个或者1个!",
+  "i18n_must_be_auto_or_number": "分区容量必须是auto或数字！",
+  "i18n_swap_must": "swap分区格式必须是swap！",
+  "raidDisk": "raidDisk",
+  "i18n_file_type_cant_be_null": "文件类型不能为空！",
+  "i18n_all_greater_than_1_gb": "所有分区最低容量不能小于1GB！",
+  "i18n_mut_only_one": "必须有且仅有一个根，swap和/boot分区！",
+  "only_iso_no_more_than_10g": "只能上传ISO文件，且不超过10GB",
+  "drag_file_into_or": "将文件拖到此处，或",
+  "click_to_upload": "点击上传",
+  "uefi_boot": "UEFI 引导",
+  "not_detected": "未在位",
+  "not_exists": "未检测到",
+  "detected": "在位",
+  "obm_not_exists": "带外信息未配置",
+  "help_doc": "帮助文档",
+  "created": "待执行",
+  "running": "执行中",
+  "failed": "失败",
+  "succeeded": "成功",
+  "Task": "任务",
+  "instance_id": "任务 Id",
   "i18n_zu": "组",
   "i18n_raid60_must_be_2n": "raid60磁盘数必须是2的倍数！",
   "i18n_di": "第",
@@ -12,5 +326,75 @@
   "i18n_raid6_must_greater_than_4": "raid6不能少于4块磁盘！",
   "i18n_raid50_must_greater_than_6": "raid50不能少于6块磁盘！",
   "i18n_zu_de_raid_not_config": "组的RAID策略没有设置！",
-  "i18n_raid1_must_greater_than_3": "raid3不能少于3块磁盘！"
+  "i18n_raid1_must_greater_than_3": "raid3不能少于3块磁盘！",
+  "i18n_disk": "磁盘：",
+  "i18n_duplicate_in_array": "被重复选择进多个阵列，请检查！",
+  "view_log": "查看日志",
+  "not_ready": "未就绪",
+  "back": "回退",
+  "power": "电源",
+  "unknown": "未知",
+  "on": "开机",
+  "off": "关机",
+  "detect_params": "扫描配置",
+  "protocol": "协议",
+  "possible_params": "探测参数",
+  "community": "社区名称",
+  "port": "端口号",
+  "founded_machine_number": "已发现数量",
+  "Discovery_Rule": "发现规则",
+  "username_or_id": "ID 或邮箱",
+  "welcome": "欢迎回来，请输入用户名和密码登录RackShift",
+  "no_more_logs": "无更多日志...",
+  "about": "关于",
+  "about_us": "关于",
+  "server_message": "工作流消息",
+  "power_on": "开机",
+  "power_off": "关机",
+  "power_pxe": "PXE 重启",
+  "power_reset": "硬重启",
+  "sync_success": "同步成功",
+  "sync_fail": "同步失败",
+  "Executor": "工作流执行器",
+  "upload": "上传",
+  "upload_success_submit": "请等待上传成功之后再点击提交按钮",
+  "selected": "已选择",
+  "tai": "台",
+  "power_text": "只有配置了正确的带外信息才能通过 IPMI 获取电源状态",
+  "machine_brand": "品牌",
+  "cancel_task_success": "取消任务成功！请等待任务自动结束！",
+  "pxe_open_tip": "该节点将会开启 DHCP PXE 功能，所有该网段的物理机 PXE 启动将会被 RackShift 代理 ",
+  "add_protocol_param": "添加一个探测参数",
+  "IPMI+Rest": "IPMI 带外控制卡",
+  "workflow_submitted": "工作流已下发，请到任务页面查看执行日志",
+  "opt_fail_pxe": "操作失败！请先 PXE 启动机器等待物理机走完发现流程补充完整信息之后再补充带外信息",
+  "安装Centos7 64位版": "安装 Centos7 64位版",
+  "创建HPE服务器磁盘Raid虚拟磁盘": "创建 HPE 服务器 RAID",
+  "搜集HPE服务器磁盘Raid信息": "搜集 HPE 服务器 RAID",
+  "清空HPE服务器磁盘和Raid信息": "清空 HPE 服务器 RAID",
+  "创建Inspur服务器磁盘Raid虚拟磁盘": "创建 Inspur 服务器 RAID",
+  "清空Inspur服务器磁盘和Raid信息": "清空 Inspur 服务器 RAID",
+  "搜集Inspur服务器磁盘Raid信息": "搜集 Inspur 服务器 RAID",
+  "创建Dell服务器磁盘Raid虚拟磁盘": "创建 Dell 服务器 RAID",
+  "清空Dell服务器磁盘和Raid信息": "清空 Dell 服务器 RAID",
+  "搜集Dell服务器磁盘Raid信息": "搜集 Dell 服务器 RAID",
+  "安装 RedHat7 64位版": "安装 RedHat7 64位版",
+  "下发安装系统workflow": "安装系统 workflow 事件",
+  "下发通用workflow": "通用 workflow 事件",
+  "主节点": "主节点",
+  "从节点": "从节点",
+  "version": "版本",
+  "batch_params": "批量参数设置",
+  "common_params": "通用装机参数",
+  "nic": "业务网卡编号",
+  "productkey": "密钥",
+  "smb_user": "SAMBA 用户名",
+  "smb_password": "SAMBA 密码",
+  "windwos_param": "Windows 参数配置",
+  "domain": "域",
+  "host_increase": "自增",
+  "increase_host_desc": "HOSTNAME1,HOSTNAME2,...",
+  "base_number": "HOSTNAME 增长基数",
+  "platform": "平台",
+  "samba": "SAMBA"
 }
