--- a/rackshift-web/src/i18n/zh-CN.json
+++ b/rackshift-web/src/i18n/zh-CN.json
@@ -368,7 +368,7 @@
   "IPMI+Rest": "IPMI 带外控制卡",
   "workflow_submitted": "工作流已下发，请到任务页面查看执行日志",
   "opt_fail_pxe": "操作失败！请先 PXE 启动机器等待物理机走完发现流程补充完整信息之后再补充带外信息",
-  "安装Centos7 64位版": "安装 Centos7 64位版",
+  "安装Centos7 64位版": "安装 CentOS7 64位版",
   "创建HPE服务器磁盘Raid虚拟磁盘": "创建 HPE 服务器 RAID",
   "搜集HPE服务器磁盘Raid信息": "搜集 HPE 服务器 RAID",
   "清空HPE服务器磁盘和Raid信息": "清空 HPE 服务器 RAID",
