--- a/.github/ISSUE_TEMPLATE/v1.0.0-issue.md
+++ b/.github/ISSUE_TEMPLATE/v1.0.0-issue.md
@@ -3,7 +3,7 @@ name: v1.0.0反馈
 about: 提交关于 v1.0.0 的缺陷与建议，赢取Lv同款鼠标垫！马克杯！文化衫！
 title: "[v1.0.0]"
 labels: v1.0.0
-assignees: luty2018
+assignees: zhangdahai112
 
 ---
 
