refactor:工作流，镜像描述文案修改

--- a/rackshift-web/src/i18n/zh-CN.json
+++ b/rackshift-web/src/i18n/zh-CN.json
@@ -302,9 +302,9 @@
   "drag_file_into_or": "将文件拖到此处，或",
   "click_to_upload": "点击上传",
   "uefi_boot": "UEFI 引导",
-  "not_detected": "未在位",
+  "not_detected": "不可用",
   "not_exists": "未检测到",
-  "detected": "在位",
+  "detected": "可用",
   "obm_not_exists": "带外信息未配置",
   "help_doc": "帮助文档",
   "created": "待执行",
