refactor:国际化完善

--- a/rackshift-server/src/main/resources/i18n/message_en_US.properties
+++ b/rackshift-server/src/main/resources/i18n/message_en_US.properties
@@ -1,2 +1,9 @@
-parameter_error="parameter error!"
-user_not_exists="user does not exists!"
+parameter_error="parameter error"
+user_not_exists="user not exists"
+i18n_passowrd_wrong="passowrd wrong"
+i18n_state_error="state error"
+i18n_param_error="param error"
+i18n_status_not_valid="status not valid"
+error="error"
+i18n_error="error"
+user_has_bean_deleted="user has bean deleted"
