--- a/rackshift-server/src/main/resources/i18n/message_zh_TW.properties
+++ b/rackshift-server/src/main/resources/i18n/message_zh_TW.properties
@@ -1,2 +1,9 @@
-parameter_error="parameter error"
+parameter_error="参数错误"
 user_not_exists="用户不存在"
+i18n_passowrd_wrong="密码错误"
+i18n_state_error="状态错误"
+i18n_param_error="参数错误"
+i18n_status_not_valid="状态不正确"
+error="错误"
+i18n_error="错误"
+user_has_bean_deleted="用户已经被删除"
