refactor:后端国际化

--- a/rackshift-server/src/main/resources/i18n/message_en_US.properties
+++ b/rackshift-server/src/main/resources/i18n/message_en_US.properties
@@ -7,3 +7,16 @@ i18n_status_not_valid="status not valid"
 error="error"
 i18n_error="error"
 user_has_bean_deleted="user has bean deleted"
+
+onrack="onrack"
+provisioning="provisioning"
+discovering="discovering"
+deploying="deploying"
+ready="ready"
+allocated="allocated"
+deployed="deployed"
+created="created"
+running="running" 
+failed="failed" 
+cancelled="cancelled"
+succeeded="succeeded"
