--- a/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
+++ b/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
@@ -7,3 +7,15 @@ i18n_status_not_valid="状态不正确"
 error="错误"
 i18n_error="错误"
 user_has_bean_deleted="用户已经被删除"
+onrack="已上架"
+provisioning="准备中"
+discovering="发现中"
+deploying="部署中"
+ready="就绪"
+allocated="已分配"
+deployed="已部署"
+created="待执行"
+running="执行中" 
+failed="失败" 
+cancelled="已取消"
+succeeded="成功"
