fix:国际化中文乱码问题修复

--- a/rackshift-server/src/main/resources/i18n/message_en_US.properties
+++ b/rackshift-server/src/main/resources/i18n/message_en_US.properties
@@ -1,22 +1,22 @@
-parameter_error="parameter error"
-user_not_exists="user not exists"
-i18n_passowrd_wrong="passowrd wrong"
-i18n_state_error="state error"
-i18n_param_error="param error"
-i18n_status_not_valid="status not valid"
-error="error"
-i18n_error="error"
-user_has_bean_deleted="user has bean deleted"
+parameter_error=parameter error
+user_not_exists=user not exists
+i18n_passowrd_wrong=passowrd wrong
+i18n_state_error=state error
+i18n_param_error=param error
+i18n_status_not_valid=status not valid
+error=error
+i18n_error=error
+user_has_bean_deleted=user has bean deleted
 
-onrack="onrack"
-provisioning="provisioning"
-discovering="discovering"
-deploying="deploying"
-ready="ready"
-allocated="allocated"
-deployed="deployed"
-created="created"
-running="running" 
-failed="failed" 
-cancelled="cancelled"
-succeeded="succeeded"
+onrack=onrack
+provisioning=provisioning
+discovering=discovering
+deploying=deploying
+ready=ready
+allocated=allocated
+deployed=deployed
+created=created
+running=running 
+failed=failed 
+cancelled=cancelled
+succeeded=succeeded
