--- a/rackshift-server/src/main/resources/i18n/message_zh_TW.properties
+++ b/rackshift-server/src/main/resources/i18n/message_zh_TW.properties
@@ -1,21 +1,21 @@
-parameter_error="参数错误"
-user_not_exists="用户不存在"
-i18n_passowrd_wrong="密码错误"
-i18n_state_error="状态错误"
-i18n_param_error="参数错误"
-i18n_status_not_valid="状态不正确"
-error="错误"
-i18n_error="错误"
-user_has_bean_deleted="用户已经被删除"
-onrack="已上架"
-provisioning="準備中"
-discovering="發現中"
-deploying="部署中"
-ready="就緒"
-allocated="已分配"
-deployed="已部署"
-created="待執行"
-running="執行中" 
-failed="失敗" 
-cancelled="已取消"
-succeeded="成功"
+parameter_error=参数错误
+user_not_exists=用户不存在
+i18n_passowrd_wrong=密码错误
+i18n_state_error=状态错误
+i18n_param_error=参数错误
+i18n_status_not_valid=状态不正确
+error=错误
+i18n_error=错误
+user_has_bean_deleted=用户已经被删除
+onrack=已上架
+provisioning=準備中
+discovering=發現中
+deploying=部署中
+ready=就緒
+allocated=已分配
+deployed=已部署
+created=待執行
+running=執行中 
+failed=失敗 
+cancelled=已取消
+succeeded=成功
