fix:国际化中文乱码问题修复

--- a/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
+++ b/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
@@ -1,21 +1,17 @@
-parameter_error=参数错误
-user_not_exists=用户不存在
-i18n_passowrd_wrong=密码错误
-i18n_state_error=状态错误
-i18n_param_error=参数错误
-i18n_status_not_valid=状态不正确
-error=错误
-i18n_error=错误
-user_has_bean_deleted=用户已经被删除
-onrack=已上架
-provisioning=准备中
-discovering=发现中
-deploying=部署中
-ready=就绪
-allocated=已分配
-deployed=已部署
-created=待执行
-running=执行中 
-failed=失败 
-cancelled=已取消
-succeeded=成功
+parameter_error=\u53C2\u6570\u9519\u8BEF
+user_not_exists=\u7528\u6237\u4E0D\u5B58\u5728
+password_wrong=\u5BC6\u7801\u9519\u8BEF
+status_not_valid=\u72B6\u6001\u4E0D\u6B63\u786E
+error=\u9519\u8BEF
+onrack=\u5DF2\u4E0A\u67B6
+provisioning=\u51C6\u5907\u4E2D
+discovering=\u53D1\u73B0\u4E2D
+deploying=\u90E8\u7F72\u4E2D
+ready=\u5C31\u7EEA
+allocated=\u5DF2\u5206\u914D
+deployed=\u5DF2\u90E8\u7F72
+created=\u5F85\u6267\u884C
+running=\u05B4\u6267\u884C\u4E2D 
+failed=\u5931\u8D25
+cancelled=\u5DF2\u53D6\u6D88
+succeeded=\u6210\u529F
