--- a/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
+++ b/rackshift-server/src/main/resources/i18n/message_zh_CN.properties
@@ -15,3 +15,4 @@ running=\u05B4\u6267\u884C\u4E2D
 failed=\u5931\u8D25
 cancelled=\u5DF2\u53D6\u6D88
 succeeded=\u6210\u529F
+i18n_ex_apikey_limit=Api Key \u6700\u591A5\u4E2A
