--- a/rackshift-server/src/main/resources/i18n/message_zh_TW.properties
+++ b/rackshift-server/src/main/resources/i18n/message_zh_TW.properties
@@ -17,3 +17,4 @@ running=\u57F7\u884C\u4E2D
 failed=\u5931\u6557 
 cancelled=\u5DF2\u53D6\u6D88
 succeeded=\u6210\u529F
+i18n_ex_apikey_limit=Api Key \u6700\u591A5\u500B
